# CMAKE-Tutorials

1-hello-world/: CMakeLists.txt  main.cpp
10-cmake-warnings/: CMakeLists.txt
10-cmake-warnings/app/: main.cpp
10-cmake-warnings/src/my_lib/: my_lib.cpp  my_lib.h
10-cmake-warnings/tests/: CMakeLists.txt  main.cpp
11-compiler-warnings/: CMakeLists.txt
11-compiler-warnings/app/: CMakeLists.txt  main.cpp
11-compiler-warnings/src/my_lib/: my_lib.h
12-sanitizer/: CMakeLists.txt  Makefile
12-sanitizer/app/: main.cpp
12-sanitizer/src/my_lib/: CMakeLists.txt
13-ipo-lto/: CMakeLists.txt
13-ipo-lto/app/: CMakeLists.txt
13-ipo-lto/cmake/: AddGitSubmodule.cmake  Sanitizers.cmake  Warnings.cmake
13-ipo-lto/src/my_lib/: CMakeLists.txt
14-cpm/: CMakeLists.txt
14-cpm/cmake/: LTO.cmake
14-cpm2/: CMakeLists.txt
14-cpm2/src/my_lib/: my_lib.cpp
2-basic-project-struct/: CMakeLists.txt
2-basic-project-struct/app/: CMakeLists.txt  main.cpp
2-basic-project-struct/src/my_lib/: CMakeLists.txt
3-variables/: CMakeLists.txt  Makefile
3-variables/src/: CMakeLists.txt
3-variables/src/my_lib/: CMakeLists.txt
4-configuration/: CMakeLists.txt
4-configuration/app/: CMakeLists.txt
4-configuration/src/my_lib/: CMakeLists.txt
5-refactor/: CMakeLists.txt
5-refactor/app/: CMakeLists.txt
5-refactor/configured/: config.hpp.in
6-external-lib/: CMakeLists.txt
6-external-lib/app/: CMakeLists.txt  main.cpp
6-external-lib/src/my_lib/: my_lib.cpp
7-fetch-lib/: CMakeLists.txt
7-fetch-lib/app/: CMakeLists.txt  main.cpp
7-fetch-lib/src/my_lib/: CMakeLists.txt
8-doxygen-doc/: CMakeLists.txt
8-doxygen-doc/cmake/: AddGitSubmodule.cmake
8-doxygen-doc/configured/: CMakeLists.txt
8-doxygen-doc/src/my_lib/: my_lib.cpp
9-unit-testing/configured/: CMakeLists.txt
9-unit-testing/src/my_lib/: CMakeLists.txt
